--- a/home.css
+++ b/home.css
@@ -77,26 +77,44 @@ body{
     justify-content: center;
     align-items: center;
     flex-direction: row;
-    width: 100%;
-    
+    width: 100%; 
 }
 
 .button{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #071633  ;
+    background-color: #071633;
+    color: #74d0f6;
     width: 100%;
     margin: 10px;
     height:6.5vh;
     border-radius: 20px;
     box-shadow: -3px -3px #04102723;
+    font-size: 20px;
+    border: none;
 }
 .button a{
     text-decoration: none;
-    color: #74d0f6;
+    color: #74d0f6;   
+
+}
+.alert-contact{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 5vh;
+    margin: 10px;
+}
+.alert-mail{
     font-size: 20px;
-    font-weight: bold;
+    padding: 13px;
+    margin: 10px;
+    width: 10vw;
+    background-color: #74d0f6;
+    color: white;
+    border-radius: 10px;
+    border: none;
 }
 
 
