--- a/style/clock.css
+++ b/style/clock.css
@@ -6,4 +6,31 @@
 
 body{
     background-color: #74d0f6;
+    font-family: 'Orbitron', sans-serif;
+}
+
+.main{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 100vh;
+    width: 100vw;
+}
+
+.orologio{
+    display: flex;
+    justify-content:center;
+    align-items:flex-end;
+    width: 100%;
+    height: 50%;
+    font-size: 5vw;
+}
+
+.calendario{
+    width: 100%;
+    height: 50%;
+    display: flex;
+    justify-content: center;
+    font-size: 5vw;
 }
