--- a/style/clock.css
+++ b/style/clock.css
@@ -9,6 +9,24 @@ body{
     font-family: 'Orbitron', sans-serif;
 }
 
+.homebtn{
+    border: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 5vh;
+    width: 15vh;
+    border-radius: 10px;
+    background-color: #071633;
+    margin-top: 10px;
+}
+.homebtn a{
+    color: white;
+    text-decoration: none;
+    font-family: 'Raleway', sans-serif;
+    font-size: 2vh;
+}
+
 .main{
     display: flex;
     justify-content: center;
@@ -24,7 +42,7 @@ body{
     align-items:flex-end;
     width: 100%;
     height: 50%;
-    font-size: 5vw;
+    font-size: 7vw;
 }
 
 .calendario{
@@ -32,5 +50,5 @@ body{
     height: 50%;
     display: flex;
     justify-content: center;
-    font-size: 5vw;
+    font-size: 6vw;
 }
