--- a/style/todo.css
+++ b/style/todo.css
@@ -6,6 +6,7 @@
 body{
     background-color: #74d0f6;
     font-family: 'Raleway', sans-serif;
+    position: relaive;
 }
 
 .main{
@@ -18,6 +19,7 @@ body{
 }
 .todo{
     width: 60vw;
+    height: 80vh;
 }
 ul {
     margin: 0;
@@ -77,7 +79,6 @@ ul li.checked::before {
 }
 
 .close:hover {
-    background-color: #f44336;
     color: white;
 }
 
@@ -86,6 +87,10 @@ ul li.checked::before {
     padding: 30px 40px;
     color: white;
     text-align: center;
+    border-radius: 15px;
+}
+.header h2{
+    margin-bottom:10px;
 }
 
 .header:after {
@@ -102,6 +107,8 @@ input {
     padding: 10px;
     float: left;
     font-size: 16px;
+    border-top-left-radius:15px;
+    border-bottom-left-radius: 15px;
 }
 
 .addBtn {
@@ -115,6 +122,13 @@ input {
     cursor: pointer;
     transition: 0.3s;
     border-radius: 0;
+    border-top-right-radius: 15px;
+    border-bottom-right-radius: 15px;
+}
+
+.addUL li{
+    border-radius: 10px;
+    margin-top: 5px;
 }
 
 .addBtn:hover {
@@ -123,4 +137,25 @@ input {
 
 input:focus{
     outline: none;
+}
+
+.home{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 20vh;
+}
+.homebtn{
+    width: 100px;
+    height: 5vh;
+    border-radius:15px;
+    border:none;
+    background-color: #071633;
+}
+
+.homebtn a{
+    color: white;
+    text-decoration: none;
+    font-size: 20px;
 }
