--- a/style/todo.css
+++ b/style/todo.css
@@ -104,6 +104,7 @@ input {
     border: none;
     border-radius: 0;
     width: 75%;
+    height: 100%;
     padding: 10px;
     float: left;
     font-size: 16px;
@@ -114,11 +115,11 @@ input {
 .addBtn {
     padding: 10px;
     width: 25%;
+    height: 100%;
     background: #d9d9d9;
     color: #555;
     float: left;
     text-align: center;
-    font-size: 15.5px;
     cursor: pointer;
     transition: 0.3s;
     border-radius: 0;
@@ -158,4 +159,8 @@ input:focus{
     color: white;
     text-decoration: none;
     font-size: 20px;
+}
+
+.inn{
+    height: 41px;
 }
